--- a/src/index.scss
+++ b/src/index.scss
@@ -40,3 +40,9 @@ html {
 body {
   box-sizing: border-box;
 }
+
+@include respond(tab-port) { // width < 1200?
+  .col {
+    width: 100% !important;
+  }
+}
