--- a/src/index.scss
+++ b/src/index.scss
@@ -41,8 +41,6 @@ body {
   box-sizing: border-box;
 }
 
-@include respond(tab-port) { // width < 1200?
-  .col {
-    width: 100% !important;
-  }
+.ant-card-body {
+  height: 17.2rem !important;
 }
